--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,20 @@
 == jquery-oembed ChangeLog ==
 
+== 1.1.0 RC ==
+* Added Slideshare native oembed API support (patch by jaipandya)
+* Added Photobucket native oembed API support
+* Added blip.tv native oembed API support
+** Added option to include wmode parameter on videos
+* Use regex to detect URLs using the regular expressions provided by http://oohembed.com/static/endpoints.json
+** Added callback function when specific provider is not found
+** Added
+* Added support to embed.ly generic oembed provider.
+** Added support to jquery up to version 1.5
+** Added simple feature examples
+** Addes providers tests
+
+* BugFix: Incorrect use of $.extend (recommended by rformato)
+
 == 1.0.5 ==
 * BugFix: Fixed slideshare & revision3 providers
 * BugFix: Problem with the "auto" insert method.
