--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 * Blip.tv native oembed API support
 * Removed providers that are not working (myspace, screenr, qik, revision3)
 * Use regex to detect URLs using the regular expressions provided by http://oohembed.com/static/endpoints.json
-** Added callback function when specific provider is not found
+* Added callback function when specific provider is not found
 * Added beforeEmbed and afterEmbed functions
 * Support to embed.ly generic oembed provider.
 * Support to jquery up to version 1.5
@@ -14,7 +14,7 @@
 * Added supported providers tests
 * BugFix: Incorrect use of $.extend (recommended by rformato)
 
-Special thanks to Sam Cole, Jai Pandy, Steve for their patches.
+Special thanks to Sam Cole, Jai Pandy, Steve and Sean for their patches.
 
 == 1.0.5 ==
 * BugFix: Fixed slideshare & revision3 providers
